refactor: 커뮤니티 스레드 user destination 통합